--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".restaurant.RestaurantActivity" android:parentActivityName=".MainActivity" />
+        <activity android:name=".reservation.ReservationActivity" android:parentActivityName=".MainActivity">
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter
-            ></activity>
-        <activity android:name=".restaurant.RestaurantActivity"></activity>
+        </activity>
     </application>
 
 </manifest>
