--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,13 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".restaurant.RestaurantActivity" android:parentActivityName=".MainActivity" />
-        <activity android:name=".reservation.ReservationActivity" android:parentActivityName=".MainActivity">
-
-        </activity>
+        <activity
+            android:name=".reservation.ReservationActivity"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
