--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,34 +17,32 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".reservation.ReservationActivity"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".reservation.CheckoutOrder"
-            android:parentActivityName=".reservation.ReservationActivity"></activity>
+            android:parentActivityName=".reservation.ReservationActivity" />
         <activity
             android:name=".restaurant.RestaurantActivity"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".common.photo_viewer.PhotoViewActivity" />
         <activity android:name="com.soundcloud.android.crop.CropImageActivity" />
         <activity android:name=".restaurant.ChoosePhotoActivity" />
-        <activity android:name=".restaurant.gallery.PhotoGaleryActivity"></activity>
-
+        <activity android:name=".restaurant.gallery.PhotoGaleryActivity" />
         <activity
             android:name=".reservation.food_order.FoodOrderActivity"
-            android:parentActivityName=".reservation.ReservationActivity"
-           >
+            android:parentActivityName=".reservation.ReservationActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="it.polito.mad_lab3.reservation.ReservationActivity" />
         </activity>
-
-
+        <activity android:name=".elaborazioneRicerche.elaborazioneRicerche"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
