continuo sviluppo restaurant

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".common.photo_viewer.PhotoViewActivity" />
         <activity android:name="com.soundcloud.android.crop.CropImageActivity" />
         <activity android:name=".restaurant.ChoosePhotoActivity" />
+        <activity android:name=".restaurant.gallery.GalleryPhotoViewActivity" />
         <activity android:name=".restaurant.gallery.PhotoGaleryActivity" />
         <activity
             android:name=".reservation.food_order.FoodOrderActivity"
