--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,8 @@
         <activity android:name=".common.photo_viewer.PhotoViewActivity" />
         <activity android:name="com.soundcloud.android.crop.CropImageActivity" />
         <activity android:name=".restaurant.ChoosePhotoActivity" />
-        <activity android:name=".restaurant.gallery.GalleryPhotoViewActivity" />
-        <activity android:name=".restaurant.gallery.PhotoGaleryActivity" />
+        <activity android:name=".restaurant.gallery.GalleryPhotoViewActivity"  />
+        <activity android:name=".restaurant.gallery.PhotoGaleryActivity" android:parentActivityName=".restaurant.RestaurantActivity" />
         <activity
             android:name=".reservation.food_order.FoodOrderActivity"
             android:parentActivityName=".reservation.ReservationActivity">
