continuo sviluppo menu restaurant

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity
             android:name=".elaborazioneRicerche.elaborazioneRicerche"
             android:parentActivityName=".MainActivity" />
+        <activity android:name=".restaurant.menu.MenuActivity"></activity>
     </application>
 
 </manifest>
