--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:hardwareAccelerated="true"
+        android:windowSoftInputMode="stateVisible|adjustResize"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -23,26 +25,41 @@
         </activity>
         <activity
             android:name=".reservation.ReservationActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".reservation.CheckoutOrder"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:parentActivityName=".reservation.ReservationActivity" />
         <activity
             android:name=".restaurant.RestaurantActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".restaurant.ShowOfferActivity"
-            android:parentActivityName=".restaurant.RestaurantActivity" />
-
-        <activity android:name=".common.photo_viewer.PhotoViewActivity" />
+            android:parentActivityName=".restaurant.RestaurantActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity android:name=".common.photo_viewer.PhotoViewActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name="com.soundcloud.android.crop.CropImageActivity" />
-        <activity android:name=".restaurant.ChoosePhotoActivity" />
+        <activity android:name=".restaurant.ChoosePhotoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".restaurant.gallery.GalleryPhotoViewActivity" />
         <activity
             android:name=".restaurant.gallery.PhotoGaleryActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:parentActivityName=".restaurant.RestaurantActivity" />
         <activity
             android:name=".reservation.food_order.FoodOrderActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:parentActivityName=".reservation.ReservationActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -50,8 +67,15 @@
         </activity>
         <activity
             android:name=".elaborazioneRicerche.elaborazioneRicerche"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".restaurant.menu.MenuActivity"></activity>
+        <activity android:name=".restaurant.menu.MenuActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity android:name=".restaurant.menu.MenuPhotoViewActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden" ></activity>
     </application>
 
 </manifest>
