--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,9 @@
         <activity android:name=".restaurant.menu.MenuPhotoViewActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
             android:windowSoftInputMode="stateAlwaysHidden" ></activity>
+        <activity android:name=".restaurant.reviews.ReviewsActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden" ></activity>
     </application>
 
 </manifest>
