--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,11 @@
             android:name=".restaurant.reviews.add_review.AddReviewActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
             android:windowSoftInputMode="stateAlwaysHidden" />
+
+        <activity
+            android:name=".reservation.ReservationsHistoryActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".restaurant.reviews.add_review.RateDishesActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
