--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     compile 'com.soundcloud.android:android-crop:1.0.1@aar'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.google.firebase:firebase-database:9.0.0'
+    compile 'com.google.firebase:firebase-storage:9.0.0'
+    compile 'com.google.firebase:firebase-auth:9.0.0'
+    compile 'com.google.android.gms:play-services-base:9.0.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
