--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,11 @@
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="stateVisible|adjustResize">
         <activity android:name=".MainActivity">
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".reservation.ReservationActivity"
@@ -41,10 +38,7 @@
             android:name=".restaurant.RestaurantActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
             android:parentActivityName=".MainActivity"
-            android:windowSoftInputMode="stateAlwaysHidden" >
-
-
-            </activity>
+            android:windowSoftInputMode="stateAlwaysHidden"></activity>
         <activity
             android:name=".restaurant.ShowOfferActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
@@ -155,7 +149,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
             android:label="EditRestaurantProfile"
             android:parentActivityName=".MainActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name="com.soundcloud.android.crop.CropImageActivity" />
         <activity
             android:name=".manager.reservation.ReservationsActivity"
@@ -178,8 +172,8 @@
             -->
         </activity>
         <activity android:name=".user.EditUserProfileActivity" />
-        <activity android:name=".user.ShowFavouritesActivity">
-        </activity>
+        <activity android:name=".user.ShowFavouritesActivity"></activity>
+        <activity android:name=".user.UserNotificationsActivity"></activity>
     </application>
 
 </manifest>
