--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -164,10 +164,10 @@
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="it.polito.mad_lab4.manager.MainActivity" />
+                android:value=".manager.MainActivityManager" />
         </activity>
         <activity android:name=".manager.BaseBarraLaterale" />
-        <activity android:name=".manager.MainActivity">
+        <activity android:name=".manager.MainActivityManager">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
