--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -177,6 +177,7 @@
         <activity android:name=".user.EditUserProfileActivity" />
         <activity android:name=".user.ShowFavouritesActivity">
         </activity>
+        <activity android:name=".user.UserNotificationsActivity"></activity>
     </application>
 
 </manifest>
