inizio login/*registrazione (non ancora funzionante)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,12 @@
         <activity android:name=".MainActivity">
 
 
-           <!-- <intent-filter>
+           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+          <!--   -->
 
         </activity>
         <activity
@@ -167,11 +168,13 @@
                 android:value=".manager.MainActivityManager" />
         </activity>
         <activity android:name=".manager.MainActivityManager">
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            -->
         </activity>
         <activity android:name=".user.EditUserProfileActivity" />
         <activity android:name=".user.ShowFavouritesActivity">
