--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,12 @@
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="stateVisible|adjustResize">
         <activity android:name=".MainActivity">
-
-
-           <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-          <!--   -->
+            <!--  -->
 
         </activity>
         <activity
@@ -42,10 +40,7 @@
             android:name=".restaurant.RestaurantActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
             android:parentActivityName=".MainActivity"
-            android:windowSoftInputMode="stateAlwaysHidden" >
-
-
-            </activity>
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".restaurant.ShowOfferActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
@@ -156,7 +151,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
             android:label="EditRestaurantProfile"
             android:parentActivityName=".MainActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name="com.soundcloud.android.crop.CropImageActivity" />
         <activity
             android:name=".manager.reservation.ReservationsActivity"
@@ -168,6 +163,7 @@
                 android:value=".manager.MainActivityManager" />
         </activity>
         <activity android:name=".manager.MainActivityManager">
+
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -177,9 +173,9 @@
             -->
         </activity>
         <activity android:name=".user.EditUserProfileActivity" />
-        <activity android:name=".user.ShowFavouritesActivity">
-        </activity>
-        <activity android:name=".user.UserNotificationsActivity"></activity>
+        <activity android:name=".user.ShowFavouritesActivity" />
+        <activity android:name=".user.UserNotificationsActivity" />
+
     </application>
 
 </manifest>
