--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -114,12 +112,12 @@
             android:name=".restaurant.reviews.add_review.RateDishesActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
             android:windowSoftInputMode="stateAlwaysHidden" />
-        <activity android:name=".login_registrazione.Login"
-
-            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"/>
-        <activity android:name=".restaurant.cover.CoverActivity"
-
-            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"/>
+        <activity
+            android:name=".login_registrazione.Login"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard" />
+        <activity
+            android:name=".restaurant.cover.CoverActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard" />
         <activity android:name=".test.TestActivity">
 
             <!--
@@ -178,8 +176,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".manager.MainActivityManager" />
         </activity>
-        <activity android:name=".manager.MainActivityManager"
-
+        <activity
+            android:name=".manager.MainActivityManager"
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard">
 
             <!--
@@ -190,18 +188,18 @@
             </intent-filter>
             -->
         </activity>
-        <activity android:name=".user.EditUserProfileActivity"
-
-            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"/>
-        <activity android:name=".user.ShowFavouritesActivity"
-
-            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"/>
-        <activity android:name=".user.UserNotificationsActivity"
-
-            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"/>
-        <activity android:name=".login_registrazione.Register"
-
-            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"/>
+        <activity
+            android:name=".user.EditUserProfileActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard" />
+        <activity
+            android:name=".user.ShowFavouritesActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard" />
+        <activity
+            android:name=".user.UserNotificationsActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard" />
+        <activity
+            android:name=".login_registrazione.Register"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -214,12 +212,13 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".login_registrazione.Register_restaurant"
-
-            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"></activity>
-        <activity android:name=".maps_management.mainActivity_fullscreen_map"
-
-            android:configChanges="orientation|keyboardHidden|screenSize|keyboard"></activity>
+        <activity
+            android:name=".login_registrazione.Register_restaurant"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard" />
+        <activity
+            android:name=".maps_management.mainActivity_fullscreen_map"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard" />
+        <activity android:name=".ContactUsActivity"></activity>
     </application>
 
 </manifest>
